# serdeval

./: Cargo.toml  LICENSE  README.md  small.json
benches/: benches.rs
examples/: cli_validator.rs
src/: lib.rs
