[package]
name = "serdeval"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.126"

[dev-dependencies]
criterion = "0.3"
serde_json = "1.0.64"

[[bench]]
name = "benches"
harness = false

[profile.release]
debug = true
