[package]
name = "serdeval"
version = "0.1.0"
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/MarinPostma/serdeval"
categories = ["validation", "deserialization"]
keywords = ["serde", "json", "serde_json", "validation"]
description = "Serde dummy types for fast and memory efficient typed validation."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.126"

[dev-dependencies]
criterion = "0.3"
serde_json = "1.0.64"

[[bench]]
name = "benches"
harness = false

[profile.release]
debug = true
